2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/agentes/agent_manager.php: Fixed a problem with links
	and new menu strcuture.

	MERGED FROM 4.0.2

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_disk_conf_editor.php: Print message
	using new message box

	MERGED FROM 4.0.2

2012-04-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	 include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 include/functions_config.php
	 include/functions_ui.php
	 extensions/update_manager.php
	 extensions/update_manager/load_updatemanager.php
	 extensions/update_manager/lib/functions.ajax.php
	 extensions/update_manager/settings.php
	 operation/system_alert.php
	 general/login_page.php
	 godmode/setup/setup.php: Changed layout in modal windows for 
	 license information also changed several styles.
	 
	 Merged from branches.

2012-04-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, extensions/net_tools.php: cleaned
	source code style.
	
	* include/functions_networkmap.php: into the functions
	"networkmap_generate_dot" and "networkmap_create_agent_node"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.
	
	* include/functions_ui.php: fixed into the function
	"ui_print_message" lost the javascript code when the first messages
	are without close button. And into the function "ui_print_os_icon"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.
	
	Merged from the branch "pandora_4.0".

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: Fixed
	bug: In the item list of a report appears a wrong period. 

2012-04-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Stripped # character in a 
	string before converted it to image 3504479

2012-04-16  Vanessa Gil  <vanessa.gil@artica.es>
